# ChannelOS

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .env-example  Dockerfile  main.py
backend/alembic/: env.py
backend/alembic/versions/: 202603050001_initial_schema.py  202603110001_add_paid_mode_to_channels.py
backend/api/: admin_routes.py  routes.py
backend/api/admin/: advertisement_tariffs.py  advertisements.py  auth.py  channels.py  companies.py  payments.py  ranks.py  stats.py  tariffs.py  users.py
backend/api/public/: __init__.py  advertisement_tariffs.py  advertisements.py  auth.py  channels.py  companies.py  dependencies.py  payments.py  tariffs.py  upload.py  users.py
backend/bot/: handlers.py  main.py
backend/core/: auth.py  celery_app.py  rate_limit.py  tasks.py
backend/core/db/: database.py  models.py  (+1 more)
backend/payments/: stars.py  stripe_payment.py
backend/schemas/: __init__.py  advertisement.py  advertisement_tariff.py  channel.py  company.py  payment.py  rank.py  tariff.py  user.py
backend/tests/: conftest.py  test_admin_channels_and_publication.py  test_api_http_channels.py  test_auth_and_admin_users_optimizations.py  test_bot_access_sync.py  test_database_migrations.py  test_media_urls.py  test_payment_verify_security.py  test_payments_and_cleanup_flow.py  test_public_channels_api.py  test_settings.py  test_webapp_return_urls.py
docs/plans/: 2026-03-11-docker-deploy-paid-mode.md
frontend/: .env-example  Dockerfile  index.html
frontend/src/: App.jsx
nginx/: nginx.conf
(+29 files in other folders)
